<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dptoredes.leccion.numero">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="106dp">


        <TextView
            android:id="@+id/nombre"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:layout_weight="0.00" />

        <Button
            android:id="@+id/button1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_uno" />

        <Button
            android:id="@+id/button2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_dos" />

        <Button
            android:id="@+id/button3"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_tres" />

        <Button
            android:id="@+id/button4"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cuatro" />

        <Button
            android:id="@+id/button5"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_cinco" />

        <TextView
            android:id="@+id/numero"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/numero" />

        <Button
            android:id="@+id/fin"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_final" />



</LinearLayout>
</android.support.constraint.ConstraintLayout>
